--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:1.0.5"
     implementation "androidx.compose.material:material:1.0.5"
+    implementation 'org.jetbrains.compose.material:material-icons-extended:1.0.0'
     implementation "androidx.compose.ui:ui-tooling:1.0.5"
     implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
