--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
         useIR = true
+        freeCompilerArgs = ['-Xjvm-default=compatibility']
     }
     buildFeatures {
         compose true
@@ -51,21 +52,22 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:1.0.5"
-    implementation "androidx.compose.material:material:1.0.5"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation "androidx.compose.ui:ui:1.1.0"
+    implementation "androidx.compose.material:material:1.1.0"
     implementation 'org.jetbrains.compose.material:material-icons-extended:1.0.0'
-    implementation "androidx.compose.ui:ui-tooling:1.0.5"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation "androidx.compose.ui:ui-tooling:1.1.0"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.1.0"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation("androidx.navigation:navigation-compose:2.4.0-rc01")
+    implementation("androidx.navigation:navigation-compose:2.5.0-alpha02")
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 
     // Room components
     implementation "androidx.room:room-ktx:2.4.1"
     kapt "androidx.room:room-compiler:2.4.1"
 
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
-    implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.1.0"
 }
